--- a/fingann-homepage/src/Components/About/About.css
+++ b/fingann-homepage/src/Components/About/About.css
@@ -1,19 +1,19 @@
 .about {
     background: whitesmoke;
-    /* display: flex; /* or inline-flex */
-    /* padding-top: 2rem;
-    padding-bottom: 2rem; */
-    /* justify-content: space-evenly;
-    align-items: flex-start;
-    align-content: center;  */
-    grid-template-columns: 50% 50%;
+    display: flex;
+    flex-flow: row wrap;
+    /* This aligns items to the end line on main-axis */
+    justify-content: space-around;
+    align-items: center;
+    max-width: 100%;
+    max-height: 100%;
     overflow: hidden;
 }
 
-.info{
+.secoundColumn{
     grid-column-start:2;
 }
 
-.profile{
-    grid-column-start:0;
+.firstColumn{
+    grid-column-start:1;
 }
