--- a/fingann-homepage/src/Components/ContentArea/Content.css
+++ b/fingann-homepage/src/Components/ContentArea/Content.css
@@ -1,10 +1,10 @@
 .content {
     background: whitesmoke;
-    height: 100%;
-    box-sizing: border-box;
-    display: block;
+    height: 90%;
+    /* box-sizing: border-box; */
+    /* display: block; */
     padding: 2.25rem;
-    overflow: hidden;
+    /* overflow: hidden; */
     
 }
 
