--- a/fingann-homepage/src/Components/ProfilePicture/ProfilePicture.css
+++ b/fingann-homepage/src/Components/ProfilePicture/ProfilePicture.css
@@ -6,9 +6,7 @@
 
 .avatar {
     max-width:100%;
-    width: 20rem;
-    height: auto;
-    border-radius: 3%;
+    max-height: 100%;
     transform: rotate(90deg);
     
 }
